third_party/move/move-compiler-v2/tests/more-v1/parser/let_binding_missing_type.exp

Diagnostics:
error: unexpected token
  ┌─ tests/more-v1/parser/let_binding_missing_type.move:3:17
  │
3 │         let x : = 0; // Test a missing let type (but with a colon)
  │                 ^
  │                 │
  │                 Unexpected '='
  │                 Expected a type name
